# tagbench

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cv_helpers.cpp  detect_markers.cpp  input_data_preprocessor.cpp  main.cpp  pose_optimizer.cpp  pose_optimizer.h  setup.sh  synthetic_test.cpp  tagbench.cpp
.github/workflows/: build.yml
data/: arcore-mini-test-with-settings.jsonl  arcore-mini-test.jsonl  mini-test-no-markers.jsonl  mini-test.jsonl
libs/apriltags-cpp-win/: CMakeLists.txt  README.md
libs/apriltags-cpp-win/src/: CMakeLists.txt  TagDetector.cpp  camtest.cpp  getopt.cpp  getopt.h  quadtest.cpp
scripts/: augment_vio_data.py  bench_noisy.sh  plot_positions.py
src/: cv_helpers.cpp  cv_helpers.h  detect_markers.cpp  detect_markers.h  input_data_preprocessor.cpp  pch.h  pose_optimizer.cpp  synthetic_test.cpp  tagbench.cpp
